--- a/index.html
+++ b/index.html
@@ -7,14 +7,19 @@
 		* {
 			margin: 0;
 			padding: 0;
+			text-align: center;
 			overflow: hidden;
+		}
+		canvas {
 		}
 	</style>
 </head>
 <body>
 	<canvas id="map"></canvas>
+	<input id="volume" type="range" max="100" min="0" value="30" onchange="_data.change_volume(this)">
 	<script type="text/javascript" src="constructor.js"></script>
 	<script type="text/javascript" src="data.js"></script>
+	<script type="text/javascript" src="special.js"></script>
 	<script type="text/javascript" src="elems/walls.js"></script>
 	<script type="text/javascript" src="elems/food.js"></script>
 	<script type="text/javascript" src="elems/all.js"></script>
