--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 <body>
 	<canvas id="map"></canvas>
-	<input id="volume" type="range" max="100" min="0" value="30" onchange="_data.change_volume(this)">
+	<input id="volume" type="range" max="100" min="0" onchange="_data.change_volume(this)">
 	<script type="text/javascript" src="constructor.js"></script>
 	<script type="text/javascript" src="data.js"></script>
 	<script type="text/javascript" src="special.js"></script>
