--- a/index.html
+++ b/index.html
@@ -20,24 +20,24 @@
 <body>
 	<canvas id="map"></canvas>
 	<input id="volume" type="range" max="100" min="0" onchange="_data.change_volume(this)">
+	<script type="text/javascript" src="var.js"></script>
+	<script type="text/javascript" src="src.js"></script>
+	<script type="text/javascript" src="sounds.js"></script>
 	<script type="text/javascript" src="constructor.js"></script>
 	<script type="text/javascript" src="data.js"></script>
 	<script type="text/javascript" src="special.js"></script>
-	<script type="text/javascript" src="elems/walls.js"></script>
-	<script type="text/javascript" src="elems/food.js"></script>
 	<script type="text/javascript" src="elems/all.js"></script>
-	<script type="text/javascript" src="elems.js"></script>
-	<script type="text/javascript" src="map.js"></script>
+	<script type="text/javascript" src="elems/blocks_pos.js"></script>
 	<script type="text/javascript" src="ai.js"></script>
 	<script type="text/javascript" src="move.js"></script>
 	<script type="text/javascript" src="controller.js"></script>
-	<script type="text/javascript" src="player.js"></script>
-	<script type="text/javascript" src="enemyes.js"></script>
 	<script type="text/javascript" src="anim.js"></script>
 	<script type="text/javascript" src="controls.js"></script>
 	<script type="text/javascript" src="collision.js"></script>
+	<script type="text/javascript" src="shop.js"></script>
 	<script type="text/javascript" src="gl.js"></script>
 	<script type="text/javascript" src="scope.js"></script>
+	<script type="text/javascript" src="map.js"></script>
 	<script type="text/javascript" src="main.js"></script>
 </body>
 </html>
