--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 	<input id="volume" type="range" max="100" min="0" onchange="_data.change_volume(this)">
 	<script type="text/javascript" src="var.js"></script>
 	<script type="text/javascript" src="src.js"></script>
+	<script type="text/javascript" src="tools.js"></script>
 	<script type="text/javascript" src="sounds.js"></script>
 	<script type="text/javascript" src="constructor.js"></script>
 	<script type="text/javascript" src="data.js"></script>
