--- a/index.html
+++ b/index.html
@@ -20,12 +20,14 @@
 <body>
 	<canvas id="map"></canvas>
 	<input id="volume" type="range" max="100" min="0" onchange="_data.change_volume(this)">
+	<script type="text/javascript" src="lib/jquery-3.1.0.min.js"></script>
 	<script type="text/javascript" src="var.js"></script>
 	<script type="text/javascript" src="src.js"></script>
 	<script type="text/javascript" src="tools.js"></script>
 	<script type="text/javascript" src="sounds.js"></script>
 	<script type="text/javascript" src="constructor.js"></script>
 	<script type="text/javascript" src="data.js"></script>
+	<script type="text/javascript" src="Char.js"></script>
 	<script type="text/javascript" src="special.js"></script>
 	<script type="text/javascript" src="elems/all.js"></script>
 	<script type="text/javascript" src="elems/blocks_pos.js"></script>
