--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
 	<script type="text/javascript" src="elems/blocks_pos.js"></script>
 	<script type="text/javascript" src="ai.js"></script>
 	<script type="text/javascript" src="move.js"></script>
+	<script type="text/javascript" src="Mess.js"></script>
 	<script type="text/javascript" src="controller.js"></script>
 	<script type="text/javascript" src="anim.js"></script>
 	<script type="text/javascript" src="controls.js"></script>
