--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 	<script type="text/javascript" src="sounds.js"></script>
 	<script type="text/javascript" src="constructor.js"></script>
 	<script type="text/javascript" src="data.js"></script>
+	<script type="text/javascript" src="Effects.js"></script>
 	<script type="text/javascript" src="Char.js"></script>
 	<script type="text/javascript" src="special.js"></script>
 	<script type="text/javascript" src="elems/all.js"></script>
