--- a/index.html
+++ b/index.html
@@ -12,14 +12,30 @@
 		}
 		body {
 			background-color: #000;
+			height: 1024px;
+			overflow: hidden;
+		}
+		.tv {
+			position: absolute;
 		}
 		canvas {
+			margin-top: 40px;
+			margin-left: 28px;
+		}
+		#volume {
+			position: absolute;
+			margin-top: 672px;
+			margin-left: 672px;
+		}
+		#volume:hover {
+			cursor: pointer;
 		}
 	</style>
 </head>
-<body>
+<body onmouseup="_Tools.inputs.volume.mousedownDisable()">
+	<img class="tv" src="images/tv.png" alt="">
+	<img id="volume" src="images/volume.png" alt="" onmousedown="_Tools.inputs.volume.mousedownEnable()" draggable="false">
 	<canvas id="map"></canvas>
-	<input id="volume" type="range" max="100" min="0" onchange="_data.change_volume(this)">
 	<script type="text/javascript" src="lib/jquery-3.1.0.min.js"></script>
 	<script type="text/javascript" src="var.js"></script>
 	<script type="text/javascript" src="src.js"></script>
