--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 	<script type="text/javascript" src="Char.js"></script>
 	<script type="text/javascript" src="special.js"></script>
 	<script type="text/javascript" src="elems/all.js"></script>
-	<script type="text/javascript" src="elems/blocks_pos.js"></script>
+	<script type="text/javascript" src="elems/blocksPos.js"></script>
 	<script type="text/javascript" src="ai.js"></script>
 	<script type="text/javascript" src="move.js"></script>
 	<script type="text/javascript" src="Mess.js"></script>
@@ -57,7 +57,6 @@
 	<script type="text/javascript" src="collision.js"></script>
 	<script type="text/javascript" src="shop.js"></script>
 	<script type="text/javascript" src="gl.js"></script>
-	<script type="text/javascript" src="scope.js"></script>
 	<script type="text/javascript" src="map.js"></script>
 	<script type="text/javascript" src="main.js"></script>
 </body>
