--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
 	</style>
 </head>
 <body onmouseup="_Tools.inputs.volume.mousedownDisable()">
+	<h1 hidden>This is classic pacman game with new small opportunities.</h1>
+	<img hidden src="images/pacman.jpg" alt="pacman">
 	<img class="tv" src="images/tv.png" alt="">
 	<img id="volume" src="images/volume.png" alt="" onmousedown="_Tools.inputs.volume.mousedownEnable()" draggable="false">
 	<canvas id="map"></canvas>
