--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
+	<meta name="description" content="This is classic pacman game with new small opportunities.">
 	<title>Pacman</title>
 	<style>
 		* {
@@ -30,11 +31,13 @@
 		#volume:hover {
 			cursor: pointer;
 		}
+		#preview {
+			display: none;
+		}
 	</style>
 </head>
 <body onmouseup="_Tools.inputs.volume.mousedownDisable()">
-	<h1 hidden>This is classic pacman game with new small opportunities.</h1>
-	<img hidden src="images/pacman.jpg" alt="pacman">
+	<img id="preview" src="images/pacman.jpg" alt="pacman">
 	<img class="tv" src="images/tv.png" alt="">
 	<img id="volume" src="images/volume.png" alt="" onmousedown="_Tools.inputs.volume.mousedownEnable()" draggable="false">
 	<canvas id="map"></canvas>
