--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
 			cursor: pointer;
 		}
 		#preview {
-			display: none;
+			position: absolute;
+			background-color: transparent;
 		}
 	</style>
 </head>
