--- a/index.html
+++ b/index.html
@@ -32,8 +32,7 @@
 			cursor: pointer;
 		}
 		#preview {
-			position: absolute;
-			background-color: transparent;
+			display: none;
 		}
 	</style>
 </head>
