--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<meta name="description" content="This is classic pacman game with new small opportunities.">
+	<meta property="og:title" content="This is classic pacman game with new small opportunities.">
+	<meta property="og:image" content="images/pacman.jpg">
 	<title>Pacman</title>
 	<style>
 		* {
@@ -31,13 +32,36 @@
 		#volume:hover {
 			cursor: pointer;
 		}
-		#preview {
-			display: none;
+		.faq {
+			width: 260px;
+			position: absolute;
+			text-align: left;
+			font-size: 14px;
+			color: #eee;
+		}
+		.faq span {
 		}
 	</style>
 </head>
 <body onmouseup="_Tools.inputs.volume.mousedownDisable()">
-	<img id="preview" src="images/pacman.jpg" alt="pacman">
+	<div class="faq">
+		<span>This game supporting only in browser for PC</span><br/><br/>
+		<span>Controls:</span><br/>
+		<span>Up: arrow Up</span><br/>
+		<span>Down: arrow Down</span><br/>
+		<span>Left: arrow Left</span><br/>
+		<span>Right: arrow Right</span><br/>
+		<span>Pause: esc</span><br/><br/>
+		<span>Skills:</span><br/>
+		<span>Skills will become access for using after buy it in a shop.</span><br/>
+		<span>Spell 1: q</span><br/>
+		<span>Spell 2: w</span><br/>
+		<span>Spell 3: e</span><br/>
+		<span>Spell 4: r</span><br/><br/>
+		<span>Other:</span><br/>
+		<span>Fatality will become access for using after buy it in a shop.</span><br/>
+		<span>Key word for fatality: boom</span><br/>
+	</div>
 	<img class="tv" src="images/tv.png" alt="">
 	<img id="volume" src="images/volume.png" alt="" onmousedown="_Tools.inputs.volume.mousedownEnable()" draggable="false">
 	<canvas id="map"></canvas>
