--- a/index.html
+++ b/index.html
@@ -53,13 +53,13 @@
 		<span>Right: arrow Right</span><br/>
 		<span>Pause: esc</span><br/><br/>
 		<span>Skills:</span><br/>
-		<span>Skills will become access for using after buy it in a shop.</span><br/>
+		<span>Skills will become accessible for using after buy it in a shop.</span><br/>
 		<span>Spell 1: q</span><br/>
 		<span>Spell 2: w</span><br/>
 		<span>Spell 3: e</span><br/>
 		<span>Spell 4: r</span><br/><br/>
 		<span>Other:</span><br/>
-		<span>Fatality will become access for using after buy it in a shop.</span><br/>
+		<span>Fatality will become accessible for using after buy it in a shop.</span><br/>
 		<span>Key word for fatality: boom</span><br/>
 	</div>
 	<img class="tv" src="images/tv.png" alt="">
